spacing fixes for landing page

--- a/src/components/index_content.module.css
+++ b/src/components/index_content.module.css
@@ -11,14 +11,16 @@
 .left-container img {
     width: 100%;
     max-width: 600px;
-    min-width: 300px;
+    min-width: 200px;
     margin-top: 40px;
+    margin-bottom: 40px;
     height: auto;
 }
 .right-container {
     flex: 1;
     width: 500px;
     padding-right: 40px;
+    padding-left: 40px;
     font-family: body;
     font-size: 25px;
     color: #0E0F19;
@@ -26,8 +28,8 @@
 }
 .right-container img {
     width: 100%;
-    max-width: 500px;
-    min-width: 300px;
+    max-width: 600px;
+    min-width: 200px;
     margin-bottom: 20px;
     margin-top: 50px;
     height: auto;
