--- a/src/components/layout.module.css
+++ b/src/components/layout.module.css
@@ -2,6 +2,7 @@
   font-family: body;
   padding: 15px;
   min-height: 100vh;
+  min-width: 330px;
   background: #FAFFD8;
 }
 * {
